@@ -7,7 +7,6 @@ import org.springframework.web.cors.reactive.CorsWebFilter;
 import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
-import java.util.List;
 
 /**
  * Configuración de CORS para Spring WebFlux
@@ -15,44 +14,50 @@ import java.util.List;
 @Configuration
 public class CorsConfig {
 
-    @Bean
-    public CorsWebFilter corsWebFilter() {
-        CorsConfiguration corsConfiguration = new CorsConfiguration();
+        @Bean
+        public CorsWebFilter corsWebFilter() {
+                CorsConfiguration corsConfiguration = new CorsConfiguration();
 
-        // Permitir todos los orígenes (para desarrollo)
-        corsConfiguration.setAllowedOriginPatterns(List.of("*"));
+                // Permitir orígenes específicos (frontend en diferentes puertos)
+                corsConfiguration.setAllowedOrigins(Arrays.asList(
+                                "http://localhost:5173"
 
-        // Permitir credenciales
-        corsConfiguration.setAllowCredentials(true);
+                ));
 
-        // Métodos HTTP permitidos
-        corsConfiguration.setAllowedMethods(Arrays.asList(
-                "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+                // Permitir credenciales (necesario para enviar cookies/auth headers)
+                corsConfiguration.setAllowCredentials(true);
 
-        // Headers permitidos
-        corsConfiguration.setAllowedHeaders(Arrays.asList(
-                "Origin",
-                "Content-Type",
-                "Accept",
-                "Authorization",
-                "Access-Control-Request-Method",
-                "Access-Control-Request-Headers",
-                "X-Requested-With",
-                "Cache-Control"));
+                // Métodos HTTP permitidos
+                corsConfiguration.setAllowedMethods(Arrays.asList(
+                                "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS", "HEAD"));
 
-        // Headers expuestos al cliente
-        corsConfiguration.setExposedHeaders(Arrays.asList(
-                "Access-Control-Allow-Origin",
-                "Access-Control-Allow-Credentials",
-                "Authorization",
-                "Content-Disposition"));
+                // Headers permitidos (incluir todos los que el frontend pueda enviar)
+                corsConfiguration.setAllowedHeaders(Arrays.asList(
+                                "Origin",
+                                "Content-Type",
+                                "Accept",
+                                "Authorization",
+                                "Access-Control-Request-Method",
+                                "Access-Control-Request-Headers",
+                                "X-Requested-With",
+                                "Cache-Control",
+                                "X-Auth-Token"));
 
-        // Tiempo de cache para preflight requests
-        corsConfiguration.setMaxAge(3600L);
+                // Headers expuestos al cliente (que el frontend puede leer)
+                corsConfiguration.setExposedHeaders(Arrays.asList(
+                                "Access-Control-Allow-Origin",
+                                "Access-Control-Allow-Credentials",
+                                "Authorization",
+                                "Content-Disposition",
+                                "X-Auth-Token"));
 
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", corsConfiguration);
+                // Tiempo de cache para preflight requests (1 hora)
+                corsConfiguration.setMaxAge(3600L);
 
-        return new CorsWebFilter(source);
-    }
+                // Aplicar configuración a todas las rutas
+                UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+                source.registerCorsConfiguration("/**", corsConfiguration);
+
+                return new CorsWebFilter(source);
+        }
 }
